// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.UI.StatusIndicator closing should render correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #e63939;
}

<div
  className="c0"
>
  <svg
    height="0.7em"
    viewBox="0 0 24 24"
    width="0.7em"
  >
    <circle
      cx={12}
      cy={12}
      fill="currentColor"
      r={8}
    />
  </svg>
</div>
`;

exports[`component.UI.StatusIndicator offline should render correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #959595;
}

<div
  className="c0"
>
  <svg
    height="0.7em"
    viewBox="0 0 24 24"
    width="0.7em"
  >
    <circle
      cx={12}
      cy={12}
      fill="currentColor"
      r={8}
    />
  </svg>
</div>
`;

exports[`component.UI.StatusIndicator online should render correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #39e673;
}

<div
  className="c0"
>
  <svg
    height="0.7em"
    viewBox="0 0 24 24"
    width="0.7em"
  >
    <circle
      cx={12}
      cy={12}
      fill="currentColor"
      r={8}
    />
  </svg>
</div>
`;

exports[`component.UI.StatusIndicator pending should render correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #fd9800;
}

<div
  className="c0"
>
  <svg
    height="0.7em"
    viewBox="0 0 24 24"
    width="0.7em"
  >
    <circle
      cx={12}
      cy={12}
      fill="currentColor"
      r={8}
    />
  </svg>
</div>
`;
